[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "macros", "json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
collateral_vault = { path = "../programs/collateral_vault", features = [
    "no-entrypoint",
] }
# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
] }
serde_json = "1.0"

# Anchor + Solana
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-sdk = "2.3.0"
solana-client = "2.3.0"
solana-program = "2.3.0"

# Error handling
anyhow = "1"
thiserror = "2.0.17"
futures = "0.3"


# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"


[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
# Add your program
collateral_vault = { path = "../programs/collateral_vault" }
